# i18n-convert

./: Cargo.toml  README.md
.github/workflows/: release.yml
homebrew/: i18n-convert.rb
npm/: install.js  package.json
src/: cli.rs  convert.rs  detect.rs  lib.rs  main.rs  placeholder_convert.rs
src/formats/: android_xml.rs  arb.rs  captivate_xml.rs  csv_format.rs  excel.rs  hjson.rs  i18next.rs  ini.rs  ios_plist.rs  ios_strings.rs  ispring_xliff.rs  java_properties.rs  js_format.rs  json5_format.rs  json_structured.rs  markdown.rs  mod.rs  neon.rs  php_laravel.rs  plain_text.rs  po.rs  qt_linguist.rs  resx.rs  srt.rs  stringsdict.rs  tmx.rs  toml_format.rs  ts_format.rs  xcstrings.rs  xliff1.rs  xliff2.rs  yaml_plain.rs  yaml_rails.rs
tests/: conversion_pipeline_tests.rs  cross_format_tests.rs  footer_tests.rs  format_registry_tests.rs  ir_kitchen_sink.rs  ir_tests.rs  roundtrip_android_xml.rs  roundtrip_arb.rs  roundtrip_captivate_xml.rs  roundtrip_csv_format.rs  roundtrip_excel.rs  roundtrip_hjson.rs  roundtrip_i18next.rs  roundtrip_ini.rs  roundtrip_ios_plist.rs  roundtrip_ios_strings.rs  roundtrip_ispring_xliff.rs  roundtrip_java_properties.rs  roundtrip_js_format.rs  roundtrip_json5.rs  roundtrip_json_structured.rs  roundtrip_markdown.rs  roundtrip_neon.rs  roundtrip_php_laravel.rs  roundtrip_plain_text.rs  roundtrip_po.rs  roundtrip_qt_linguist.rs  roundtrip_resx.rs  roundtrip_srt.rs  roundtrip_stringsdict.rs  roundtrip_tmx.rs  roundtrip_toml.rs  roundtrip_ts_format.rs  roundtrip_xcstrings.rs  roundtrip_xliff1.rs  roundtrip_xliff2.rs  roundtrip_yaml_plain.rs  roundtrip_yaml_rails.rs  warning_tests.rs
(+129 files in other folders)
